cargo-public-api/tests/snapshots/cargo_public_api_bin_tests__list_public_items.snap
---
source: cargo-public-api/tests/cargo-public-api-bin-tests.rs
expression: stdout
---
pub mod public_api
pub mod public_api::diff
pub struct public_api::diff::ChangedPublicItem
pub public_api::diff::ChangedPublicItem::new: public_api::PublicItem
pub public_api::diff::ChangedPublicItem::old: public_api::PublicItem
impl public_api::diff::ChangedPublicItem
pub fn public_api::diff::ChangedPublicItem::grouping_cmp(&self, other: &Self) -> core::cmp::Ordering
impl core::clone::Clone for public_api::diff::ChangedPublicItem
pub fn public_api::diff::ChangedPublicItem::clone(&self) -> public_api::diff::ChangedPublicItem
impl core::cmp::Eq for public_api::diff::ChangedPublicItem
impl core::cmp::PartialEq for public_api::diff::ChangedPublicItem
pub fn public_api::diff::ChangedPublicItem::eq(&self, other: &public_api::diff::ChangedPublicItem) -> bool
impl core::fmt::Debug for public_api::diff::ChangedPublicItem
pub fn public_api::diff::ChangedPublicItem::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::StructuralPartialEq for public_api::diff::ChangedPublicItem
impl core::marker::Freeze for public_api::diff::ChangedPublicItem
impl core::marker::Send for public_api::diff::ChangedPublicItem
impl core::marker::Sync for public_api::diff::ChangedPublicItem
impl core::marker::Unpin for public_api::diff::ChangedPublicItem
impl core::panic::unwind_safe::RefUnwindSafe for public_api::diff::ChangedPublicItem
impl core::panic::unwind_safe::UnwindSafe for public_api::diff::ChangedPublicItem
pub struct public_api::diff::PublicApiDiff
pub public_api::diff::PublicApiDiff::added: alloc::vec::Vec<public_api::PublicItem>
pub public_api::diff::PublicApiDiff::changed: alloc::vec::Vec<public_api::diff::ChangedPublicItem>
pub public_api::diff::PublicApiDiff::removed: alloc::vec::Vec<public_api::PublicItem>
impl public_api::diff::PublicApiDiff
pub fn public_api::diff::PublicApiDiff::between(old: public_api::PublicApi, new: public_api::PublicApi) -> Self
pub fn public_api::diff::PublicApiDiff::is_empty(&self) -> bool
impl core::clone::Clone for public_api::diff::PublicApiDiff
pub fn public_api::diff::PublicApiDiff::clone(&self) -> public_api::diff::PublicApiDiff
impl core::cmp::Eq for public_api::diff::PublicApiDiff
impl core::cmp::PartialEq for public_api::diff::PublicApiDiff
pub fn public_api::diff::PublicApiDiff::eq(&self, other: &public_api::diff::PublicApiDiff) -> bool
impl core::fmt::Debug for public_api::diff::PublicApiDiff
pub fn public_api::diff::PublicApiDiff::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::StructuralPartialEq for public_api::diff::PublicApiDiff
impl core::marker::Freeze for public_api::diff::PublicApiDiff
impl core::marker::Send for public_api::diff::PublicApiDiff
impl core::marker::Sync for public_api::diff::PublicApiDiff
impl core::marker::Unpin for public_api::diff::PublicApiDiff
impl core::panic::unwind_safe::RefUnwindSafe for public_api::diff::PublicApiDiff
impl core::panic::unwind_safe::UnwindSafe for public_api::diff::PublicApiDiff
pub mod public_api::tokens
pub enum public_api::tokens::Token
pub public_api::tokens::Token::Annotation(alloc::string::String)
pub public_api::tokens::Token::Function(alloc::string::String)
pub public_api::tokens::Token::Generic(alloc::string::String)
pub public_api::tokens::Token::Identifier(alloc::string::String)
pub public_api::tokens::Token::Keyword(alloc::string::String)
pub public_api::tokens::Token::Kind(alloc::string::String)
pub public_api::tokens::Token::Lifetime(alloc::string::String)
pub public_api::tokens::Token::Primitive(alloc::string::String)
pub public_api::tokens::Token::Qualifier(alloc::string::String)
pub public_api::tokens::Token::Self_(alloc::string::String)
pub public_api::tokens::Token::Symbol(alloc::string::String)
pub public_api::tokens::Token::Type(alloc::string::String)
pub public_api::tokens::Token::Whitespace
impl public_api::tokens::Token
pub fn public_api::tokens::Token::len(&self) -> usize
pub fn public_api::tokens::Token::text(&self) -> &str
impl core::clone::Clone for public_api::tokens::Token
pub fn public_api::tokens::Token::clone(&self) -> public_api::tokens::Token
impl core::cmp::Eq for public_api::tokens::Token
impl core::cmp::Ord for public_api::tokens::Token
pub fn public_api::tokens::Token::cmp(&self, other: &public_api::tokens::Token) -> core::cmp::Ordering
impl core::cmp::PartialEq for public_api::tokens::Token
pub fn public_api::tokens::Token::eq(&self, other: &public_api::tokens::Token) -> bool
impl core::cmp::PartialOrd for public_api::tokens::Token
pub fn public_api::tokens::Token::partial_cmp(&self, other: &public_api::tokens::Token) -> core::option::Option<core::cmp::Ordering>
impl core::fmt::Debug for public_api::tokens::Token
pub fn public_api::tokens::Token::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::hash::Hash for public_api::tokens::Token
pub fn public_api::tokens::Token::hash<__H: core::hash::Hasher>(&self, state: &mut __H)
impl core::marker::StructuralPartialEq for public_api::tokens::Token
impl core::marker::Freeze for public_api::tokens::Token
impl core::marker::Send for public_api::tokens::Token
impl core::marker::Sync for public_api::tokens::Token
impl core::marker::Unpin for public_api::tokens::Token
impl core::panic::unwind_safe::RefUnwindSafe for public_api::tokens::Token
impl core::panic::unwind_safe::UnwindSafe for public_api::tokens::Token
#[non_exhaustive] pub enum public_api::Error
pub public_api::Error::IoError(std::io::error::Error)
pub public_api::Error::SerdeJsonError(serde_json::error::Error)
impl core::convert::From<serde_json::error::Error> for public_api::Error
pub fn public_api::Error::from(source: serde_json::error::Error) -> Self
impl core::convert::From<std::io::error::Error> for public_api::Error
pub fn public_api::Error::from(source: std::io::error::Error) -> Self
impl core::error::Error for public_api::Error
pub fn public_api::Error::source(&self) -> core::option::Option<&(dyn core::error::Error + 'static)>
impl core::fmt::Debug for public_api::Error
pub fn public_api::Error::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::fmt::Display for public_api::Error
pub fn public_api::Error::fmt(&self, __formatter: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Freeze for public_api::Error
impl core::marker::Send for public_api::Error
impl core::marker::Sync for public_api::Error
impl core::marker::Unpin for public_api::Error
impl !core::panic::unwind_safe::RefUnwindSafe for public_api::Error
impl !core::panic::unwind_safe::UnwindSafe for public_api::Error
pub struct public_api::Builder
impl public_api::Builder
pub fn public_api::Builder::build(self) -> public_api::Result<public_api::PublicApi>
pub fn public_api::Builder::debug_sorting(self, debug_sorting: bool) -> Self
pub fn public_api::Builder::from_rustdoc_json(path: impl core::convert::Into<std::path::PathBuf>) -> Self
pub fn public_api::Builder::omit_auto_derived_impls(self, omit_auto_derived_impls: bool) -> Self
pub fn public_api::Builder::omit_auto_trait_impls(self, omit_auto_trait_impls: bool) -> Self
pub fn public_api::Builder::omit_blanket_impls(self, omit_blanket_impls: bool) -> Self
pub fn public_api::Builder::sorted(self, sorted: bool) -> Self
impl core::clone::Clone for public_api::Builder
pub fn public_api::Builder::clone(&self) -> public_api::Builder
impl core::fmt::Debug for public_api::Builder
pub fn public_api::Builder::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Freeze for public_api::Builder
impl core::marker::Send for public_api::Builder
impl core::marker::Sync for public_api::Builder
impl core::marker::Unpin for public_api::Builder
impl core::panic::unwind_safe::RefUnwindSafe for public_api::Builder
impl core::panic::unwind_safe::UnwindSafe for public_api::Builder
#[non_exhaustive] pub struct public_api::PublicApi
impl public_api::PublicApi
pub fn public_api::PublicApi::into_items(self) -> impl core::iter::traits::iterator::Iterator<Item = public_api::PublicItem>
pub fn public_api::PublicApi::items(&self) -> impl core::iter::traits::iterator::Iterator<Item = &public_api::PublicItem>
pub fn public_api::PublicApi::missing_item_ids(&self) -> impl core::iter::traits::iterator::Iterator<Item = &u32>
impl core::fmt::Debug for public_api::PublicApi
pub fn public_api::PublicApi::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::fmt::Display for public_api::PublicApi
pub fn public_api::PublicApi::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::marker::Freeze for public_api::PublicApi
impl core::marker::Send for public_api::PublicApi
impl core::marker::Sync for public_api::PublicApi
impl core::marker::Unpin for public_api::PublicApi
impl core::panic::unwind_safe::RefUnwindSafe for public_api::PublicApi
impl core::panic::unwind_safe::UnwindSafe for public_api::PublicApi
pub struct public_api::PublicItem
impl public_api::PublicItem
pub fn public_api::PublicItem::grouping_cmp(&self, other: &Self) -> core::cmp::Ordering
pub fn public_api::PublicItem::id(&self) -> rustdoc_types::Id
pub fn public_api::PublicItem::parent_id(&self) -> core::option::Option<rustdoc_types::Id>
pub fn public_api::PublicItem::tokens(&self) -> impl core::iter::traits::iterator::Iterator<Item = &public_api::tokens::Token>
impl core::clone::Clone for public_api::PublicItem
pub fn public_api::PublicItem::clone(&self) -> public_api::PublicItem
impl core::cmp::Eq for public_api::PublicItem
impl core::cmp::PartialEq for public_api::PublicItem
pub fn public_api::PublicItem::eq(&self, other: &Self) -> bool
impl core::fmt::Debug for public_api::PublicItem
pub fn public_api::PublicItem::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::fmt::Display for public_api::PublicItem
pub fn public_api::PublicItem::fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result
impl core::hash::Hash for public_api::PublicItem
pub fn public_api::PublicItem::hash<H: core::hash::Hasher>(&self, state: &mut H)
impl core::marker::Freeze for public_api::PublicItem
impl core::marker::Send for public_api::PublicItem
impl core::marker::Sync for public_api::PublicItem
impl core::marker::Unpin for public_api::PublicItem
impl core::panic::unwind_safe::RefUnwindSafe for public_api::PublicItem
impl core::panic::unwind_safe::UnwindSafe for public_api::PublicItem
pub const public_api::MINIMUM_NIGHTLY_RUST_VERSION: &str
pub type public_api::Result<T> = core::result::Result<T, public_api::Error>
